--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,7 +6,6 @@
   background-position:center;
   color: $white;
   position: relative;
-  padding: $standard-padding*2 $standard-padding;
   input{
     &[type="submit"]{
       max-width: $standard-padding*10;
